--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -12,9 +12,9 @@ strong {color: rgb(56,56,56)}
 
 <body>
 <h1>Privacy Policy</h1>
-<p>Your privacy is very important to us, and we take it seriously. Please read our Privacy Policy below and let us know if you have any questions or other feedback regarding it. For additional details please refer also to our&nbsp;<a href="http://localhost:8080/data_policy">Data Policy</a>.</p>
+<p>Your privacy is very important to us, and we take it seriously. Please read our Privacy Policy below and let us know if you have any questions or other feedback regarding it. For additional details please refer also to our&nbsp;<a href="data_policy.html">Data Policy</a>.</p>
 <ul>
-<li><strong>Personal information</strong>: In our ad-supported apps we use the IP address and mobile advertising ID of your device in order to show non-personalized ads. Please refer to our&nbsp;<a href="http://localhost:8080/data_policy">Data Policy</a>&nbsp;for details, including how to opt out of such usage.</li>
+<li><strong>Personal information</strong>: In our ad-supported apps we use the IP address and mobile advertising ID of your device in order to show non-personalized ads. Please refer to our&nbsp;<a href="data_policy.html">Data Policy</a>&nbsp;for details, including how to opt out of such usage.</li>
 <li><strong>Data retention</strong>: If we do happen to obtain any personal information, including emails or phone numbers perhaps obtained through support requests or other correspondence, it will be treated with the strictest confidentiality. Any such personal information will never be shared with any other entities. Any such personal information will not be retained beyond the resolution of the support request or other correspondence.</li>
 <li><strong>Age limitations</strong>: We do not knowingly contact or do business with children under 13 years of age. If a parent or guardian becomes aware that a child under the age of 13 has attempted to contact and/or do business with us, please advise us by email at jyce.solutions@gmail.com so that we may rectify the situation.</li>
 <li><strong>Anonymous usage information</strong>: Our apps may collect anonymous usage information to help improve the quality of our services and applications.</li>
