--- a/data_policy.html
+++ b/data_policy.html
@@ -10,27 +10,28 @@ strong {color: rgb(56,56,56)}
 </style>
 </head>
 <body>
-<h1>Data Policy for "Analyze your Chess - PGN Viewer" and "Analyze your Chess Pro - PGN Viewer" Apps</h1>
+<h1>Data Policy for "Analyze your Chess" and "Analyze your Chess Pro" Apps</h1>
 <h2>Advertising</h2>
-<p>"Analyze your Chess - PGN Viewer" uses advertising to provide the content free of charge. When you use "Analyze your Chess - PGN Viewer" App your device automatically sends certain information to our advertising partner Admob. This information includes, for example, the name of the app, the device type, and the advertising ID.
-The information gathered is solely used to provide our advertising partners with the bare minimum of information they need to provide their services and combat click fraud. Within the EU, we serve non-personalized ads only.</p>
-<h2>Admob</h2>
-<p>AdMob is an advertising service provided by AdMob Google Inc. Please read&nbsp;<a href="https://www.google.com/policies/technologies/partner-sites/">this overview</a>&nbsp;of how they use information from sites or apps that use their services.</p>
-<p><strong>Personal Data collected</strong>: Unique device identifiers for advertising. For example, Google Advertiser ID or Apple ID For Advertising.&nbsp;</p>
+<p>"Analyze your Chess" uses advertising to provide the content free of charge. When you use "Analyze your Chess" app, your device automatically sends certain information to our advertising partner Google AdMob. This information may include for example the name of the app, the device model, the device type, data from sensors in your device, the IP address and the advertising ID. The information gathered is solely used to provide our advertising partners with the information they need to provide their services, maintain and improve their services, provide their personalized services, including content and ads.</p>
+<h2>Google AdMob</h2>
+<p>Google AdMob is a mobile advertising subsidiary of Google LLC. Please read&nbsp;<a href="https://www.google.com/policies/technologies/partner-sites/">this overview</a>&nbsp;of how they use information from sites or apps that use their services.</p>
+<p><strong>Personal Data that may be collected</strong>: IP Address, advertising ID</p>
+<p><strong>Why Google collects data</strong>: See more <a href="https://policies.google.com/privacy#whycollect">here</a></p>
 <p><strong>Place of processing</strong>: United States</p>
-<p><a href="https://www.google.com/policies/technologies/ads/" target="_blank" rel="noopener">Privacy Policy</a>&nbsp;|&nbsp;<a href="https://www.google.com/settings/ads" target="_blank" rel="noopener">Opt Out</a></p>
+<p><a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Privacy Policy</a>&nbsp;|&nbsp;<a href="https://www.google.com/settings/ads" target="_blank" rel="noopener">Manage Privacy and Customize Ads</a></p>
 <h2>Analytics</h2>
-<p>"Analyze your Chess - PGN Viewer" and "Analyze your Chess Pro - PGN Viewer" Apps use analytics (usage data) in order to understand how users engage with these apps and how to improve them. When you use either "Analyze your Chess - PGN Viewer" App or "Analyze your Chess Pro - PGN Viewer" App your device automatically sends certain information to our analytics partner Google Analytics. The information gathered includes, for example, the device type, the session length, and interactions with various user interface elements (buttons) in the game.</p>
-<p>The analytics data collected is anonymous and is not personal data. </p>
+<p>Both "Analyze your Chess" and "Analyze your Chess Pro" Apps uses analytics (usage data) in order to understand how users engage with these apps and how to improve them. When you use either "Analyze your Chess" App or "Analyze your Chess Pro" App your device automatically sends certain information to our analytics partner Google Analytics. The information gathered includes, for example, the device type, the session length, and interactions with various user interface elements (buttons) in the game.</p>
+<p>The analytics data collected is anonymous and is not personal data.</p>
 <h2>Opting out</h2>
-<p>If you no longer want us to use your IP address and mobile advertising ID then you need to either buy the "Analyze your Chess Pro - PGN Viewer" app (without ads) or stop using the "Analyze your Chess - PGN Viewer" app.</p>
-<p>For more choices please follow the &ldquo;Opt Out&rdquo; link for the respective service above.</p>
+<p>If you no longer want us to use your IP address, then you need stop using "Analyze your Chess" app.</p>
+<p>If you no longer want us to use your advertising ID, then you need to delete your device's advertising ID following the steps from <a href="https://policies.google.com/technologies/ads">here</a> or you need to stop using "Analyze your Chess" app.</p>
+<p>For more choices please follow the “Manage Privacy and Customize Ads” link for the respective service above.</p>
 <h2>Owner and Data Controller</h2>
 <p>Lucian Musca, 7-11 Henri Barbusse, ap 19, Cluj-Napoca 400616, Romania</p>
 <p>Contact e-mail:&nbsp;<a href="mailto:jyce.solutions@gmail.com">jyce.solutions@gmail.com</a></p>
 <h2>Questions concerning our Data Consent Policy</h2>
 <p>If you have any question concerning our usage of personal data please&nbsp;<a href="mailto:jyce.solutions@gmail.com">contact us</a>.</p>
 <h2>Last Updated</h2>
-<p>The Data Consent was last updated on 2018/08/18.</p>
+<p>The Data Consent was last updated on 2024/02/17.</p>
 </body>
 </html>
