--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ strong {color: rgb(56,56,56)}
 <li><strong>Personal information</strong>: In the "Analyze your Chess" app we may use and collect the IP address and the advertising ID of your device in order to show ads. Please refer to our&nbsp;<a href="data_policy.html">Data Policy</a>&nbsp;for details, including how to opt out of such usage.</li>
 <li><strong>Data retention</strong>: If we do happen to obtain any personal information, including emails or phone numbers perhaps obtained through support requests or other correspondence, it will be treated with the strictest confidentiality. Any such personal information will never be shared with any other entities. Any such personal information will not be retained beyond the resolution of the support request or other correspondence.</li>
 <li><strong>Age limitations</strong>: We do not knowingly contact or do business with children under 13 years of age. If a parent or guardian becomes aware that a child under the age of 13 has attempted to contact and/or do business with us, please advise us by email at jyce.solutions@gmail.com so that we may rectify the situation.</li>
-<li><strong>Anonymous usage information</strong>: Both the "Analyze your Chess" App and the "Analyze your Chess Pro" app collect anonymous usage information to help improve the quality of our applications.</li>
-<li><strong>Internet permissions</strong>: "Analyze your Chess" and "Analyze your Chess Pro" Apps require internet permissions, for the purpose of providing links to the app store entry of our products, to provide advertising and to collect anonymous usage information (see above).</li>
-<li><strong>In-app purchases</strong>: "Analyze your Chess" and "Analyze your Chess Pro" Apps may contain in-app purchases (IAP&rsquo;s).</li>
-<li><strong>Advertising</strong>: "Analyze your Chess" contains third-party advertising. </li>
-<li><strong>Social media</strong>: "Analyze your Chess" and "Analyze your Chess Pro" Apps do not interact with any social media sites. We may provide links to our own social media sites for the purpose of providing support and product information.</li>
+<li><strong>Anonymous usage information</strong>: Both "Analyze your Chess" App and "Analyze your Chess Pro" App collect anonymous usage information to help improve the quality of our applications.</li>
+<li><strong>Internet permissions</strong>: Both "Analyze your Chess" App and "Analyze your Chess Pro" App require internet permissions, for the purpose of providing links to the app store entry of our products, to collect anonymous usage information (see above), and to provide advertising.</li>
+<li><strong>In-app purchases</strong>: Both "Analyze your Chess" App and "Analyze your Chess Pro" App may contain in-app purchases (IAP&rsquo;s).</li>
+<li><strong>Advertising</strong>: "Analyze your Chess" App contains third-party advertising. </li>
+<li><strong>Social media</strong>: Both "Analyze your Chess" App and "Analyze your Chess Pro" App do not interact with any social media sites. We may provide links to our own social media sites for the purpose of providing support and product information.</li>
 </ul>
 <h2>Questions concerning our Privacy Policy</h2>
 <p>If you have any question concerning our Privacy Policy please&nbsp;<a href="mailto:jyce.solutions@gmail.com?subject=Privacy%20Policy&body=">contact us</a>.</p>
