--- a/data_policy.html
+++ b/data_policy.html
@@ -20,7 +20,7 @@ strong {color: rgb(56,56,56)}
 <p><strong>Place of processing</strong>: United States</p>
 <p><a href="https://policies.google.com/privacy" target="_blank" rel="noopener">Privacy Policy</a>&nbsp;|&nbsp;<a href="https://www.google.com/settings/ads" target="_blank" rel="noopener">Manage Privacy and Customize Ads</a></p>
 <h2>Analytics</h2>
-<p>Both "Analyze your Chess" and "Analyze your Chess Pro" Apps uses analytics (usage data) in order to understand how users engage with these apps and how to improve them. When you use either "Analyze your Chess" App or "Analyze your Chess Pro" App your device automatically sends certain information to our analytics partner Google Analytics. The information gathered includes, for example, the device type, the session length, and interactions with various user interface elements (buttons) in the game.</p>
+<p>Both "Analyze your Chess" App and "Analyze your Chess Pro" App use analytics (usage data) in order to understand how users engage with these apps and how to improve them. When you use either "Analyze your Chess" App or "Analyze your Chess Pro" App your device automatically sends certain information to our analytics partner Google Analytics. The information gathered includes, for example, the device type, the session length, and interactions with various user interface elements (buttons) in the game.</p>
 <p>The analytics data collected is anonymous and is not personal data.</p>
 <h2>Opting out</h2>
 <p>If you no longer want us to use your IP address, then you need stop using "Analyze your Chess" app.</p>
