Add privacy policy for Chess Engines App

--- a/privacy_policy_for_chess_engines_app.html
+++ b/privacy_policy_for_chess_engines_app.html
@@ -17,24 +17,27 @@
 <p>This Privacy Policy is designed to inform you about the collection, use, and disclosure of information in connection with your use of our mobile application.</p>
 
 <h2>Information We Do Not Collect</h2>
-<p>Chess Engines does not collect any personal information from its users. We do not gather, store, or process any data related to your identity, location, device information, or any other personally identifiable information.</p>
+<p>"Chess Engines" application does not collect any personal information from its users. We do not gather, store, or process any data related to your identity, location, device information, or any other personally identifiable information.</p>
 
 <h2>Permissions</h2>
-<p>Chess Engines does not request or require any special permissions on your device. The app operates solely as a companion application to other chess GUI applications used by chess enthusiasts.</p>
+<p>"Chess Engines" application does not request or require any special permissions on your device. The app operates solely as a companion application to other chess GUI applications used by chess enthusiasts.</p>
 
 <h2>Third-Party Services</h2>
-<p>Chess Engines does not integrate with any third-party services or APIs that would involve the sharing of user data.</p>
+<p>"Chess Engines" application does not integrate with any third-party services or APIs that would involve the sharing of user data.</p>
 
 <h2>Children's Privacy</h2>
-<p>Chess Engines is not intended for use by individuals under the age of 13. We do not knowingly collect personal information from children. If you are a parent or guardian and believe that your child has provided us with any personal information, please contact us, and we will take steps to remove such information.</p>
+<p>"Chess Engines" application is not intended for use by individuals under the age of 13. We do not knowingly collect personal information from children. If you are a parent or guardian and believe that your child has provided us with any personal information, please contact us, and we will take steps to remove such information.</p>
 
 <h2>Changes to This Privacy Policy</h2>
 <p>We reserve the right to modify our Privacy Policy at any time and without any other notification. Any such modification will be effective immediately upon updating the privacy policy. It is your responsibility to review our Privacy Policy from time to time to ensure that you continue to agree with all of its terms.</p>
 
-<h2>Contact Us</h2>
-<p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at jyce.solutions@gmail.com.</p>
+<h2>Consent</h2>
+<p>By using the "Chess Engines" application, you hereby consent to our Privacy Policy and agree to its terms. If you do not agree with this policy, please do not use the "Chess Engines" application.</p>
 
-<p>Thank you for using Chess Engines!</p>
+<h2>Contact Us</h2>
+<p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <a href="mailto:jyce.solutions@gmail.com?subject=Privacy%20Policy%20Chess%20Engines&body=">jyce.solutions@gmail.com</a>.</p>
+
+<p>Thank you for using "Chess Engines" Application!</p>
 
 </body>
 
