--- a/privacy_policy_for_chess_engines_app.html
+++ b/privacy_policy_for_chess_engines_app.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy for Chess Engines</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700" rel="stylesheet">
+    <style>
+        p    {font-family: 'Roboto', sans-serif; font-weigth : 400; color: rgb(152,152,152);}
+        ul   {font-family: 'Roboto', sans-serif; font-weigth : 400; color: rgb(152,152,152);}
+        h2   {font-family: 'Roboto', sans-serif; font-weight : 500; color: black}
+        h1   {font-family: 'Roboto', sans-serif; font-weight : 700; color: black}
+        strong {color: rgb(56,56,56)}
+    </style>
 </head>
 
 <body>
