--- a/privacy_policy_for_chess_engines_app.html
+++ b/privacy_policy_for_chess_engines_app.html
@@ -20,7 +20,7 @@
 
 <h1>Privacy Policy for "Chess Engines" Application</h1>
 
-<p><strong>Effective Date:</strong>2024/02/17</p>
+<p><strong>Effective Date: </strong>2024/02/17</p>
 
 <h2>Introduction</h2>
 <p>This Privacy Policy is designed to inform you about the collection, use, and disclosure of information in connection with your use of our mobile application.</p>
@@ -40,7 +40,7 @@
 <h2>Changes to This Privacy Policy</h2>
 <p>We reserve the right to modify our Privacy Policy at any time and without any other notification. Any such modification will be effective immediately upon updating the privacy policy. It is your responsibility to review our Privacy Policy from time to time to ensure that you continue to agree with all of its terms.</p>
 
-<h2>Consent</h2>
+<h2>Your Consent</h2>
 <p>By using the "Chess Engines" application, you hereby consent to our Privacy Policy and agree to its terms. If you do not agree with this policy, please do not use the "Chess Engines" application.</p>
 
 <h2>Contact Us</h2>
