--- a/privacy_policy_for_chess_engines_app.html
+++ b/privacy_policy_for_chess_engines_app.html
@@ -20,7 +20,7 @@
 
 <h1>Privacy Policy for "Chess Engines" Application</h1>
 
-<p><h3>Effective Date: </h3>2024/02/17</p>
+<p><strong>Effective Date: </strong>2024/02/17</p>
 
 <h2>Introduction</h2>
 <p>This Privacy Policy is designed to inform you about the collection, use, and disclosure of information in connection with your use of our mobile application.</p>
